[package]
name = "zdlt-seeker-staking"
version = "0.1.0"
description = "ZDLT Seeker Staking — on-chain staking program for ZDLT token. Locks principal with time-based or authority-gated release, built with Anchor on Solana."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zdlt_seeker_staking"

[features]
default = ["no-idl"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
solana-security-txt = "1.1.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
